[tool.poetry]
name = "pynding of isaac"
version = "0.1.0"
description = ""
authors = ["Patrick Reynolds <patrickreynoldscoding@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
autopep8 = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
